--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         display: flex; 
         flex-wrap: wrap;
         flex-basis: 50%;
-        flex-direction: column;
+        flex-direction:column-reverse;
         background-color: whitesmoke;       
       }
 
