--- a/index.html
+++ b/index.html
@@ -9,11 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <style>
      .flex-container{
-        display: flex; 
-        flex-wrap: wrap;
-        flex-basis: 50%;
-        flex-direction:column-reverse;
-        background-color: whitesmoke;       
+        display: flex;     
       }
 
       .flex-center {
@@ -31,6 +27,10 @@
        flex-basis: 50%;
        flex-direction: row-reverse;
       }
+      .flex-basis-50{
+
+      }
+      
        .background-1 {
         background: #68B0AB;
       }
@@ -97,10 +97,10 @@
     <section>
       <h3>Wrapping items</h3>
       <div class="flex-container flex-wrap">
-        <div class="flex-basis-item-50 h-80 background-1"></div>
-        <div class="flex-basis-item-50 h-80 background-2"></div>
-        <div class="flex-basis-item-50 h-80 background-3"></div>
-        <div class="flex-basis-item-50 h-80 background-4"></div>
+        <div class="flex-basis-item-50 h-80 background-1">1</div>
+        <div class="flex-basis-item-50 h-80 background-2">2</div>
+        <div class="flex-basis-item-50 h-80 background-3">3</div>
+        <div class="flex-basis-item-50 h-80 background-4">4</div>
       </div>
     </section>
   </body>
