--- a/index.html
+++ b/index.html
@@ -11,7 +11,18 @@
      .flex-container{
         display: flex;     
       }
-
+        .flex-item-1 {
+           flex: 1;
+        }
+        .flex-item-2 {
+          flex: 2;
+        }
+        .flex-item-3 {
+          flex: 3;
+        }
+        .flex-item-4 {
+          flex: 2;
+        }
       .flex-center {
         display: flex;
         align-items: center;
@@ -25,10 +36,11 @@
         display: flex;
         flex-wrap: wrap;
        flex-basis: 50%;
-       flex-direction: row-reverse;
+       flex-direction: column-reverse;
       }
-      .flex-basis-50{
-
+      .flex-basis-item-50{
+        flex: 3;
+        
       }
       
        .background-1 {
